# gr-bitstream

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: bitstreamConfig.cmake
docs/: README.bitstream
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: minimal_working_example.grc  minimal_working_example.py
grc/: CMakeLists.txt  bitstream_bitstream_permutation_source_b.xml
include/bitstream/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_bitstream.cc  qa_bitstream.h  test_bitstream.cc
python/: CMakeLists.txt  __init__.py  bitstream_permutation_source_b.py  qa_bitstream_permutation_source_b.py
swig/: CMakeLists.txt  bitstream_swig.i
